--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Round section -->
         <div id="section-round" class="section-container">
             <div class="section-title">
-                Combat Round order</span>
+                Combat Round order
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
@@ -33,7 +33,7 @@
         <!-- Stances section -->
         <div id="section-stances" class="section-container">
             <div class="section-title">
-                Stances</span>
+                Stances<span class="float-right">1/turn</span>
             </div>
             <div class="section-content">
                 <div class="section-row section-subtitle text fontsize">
